typescript/checker/tests/conformance/expressions/commaOperator/commaOperatorsMultipleOperators.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            50,
        ),
        hi: BytePos(
            57,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorsMultipleOperators.ts:4:5
  |
4 | var BOOLEAN: boolean;
  |     ^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            72,
        ),
        hi: BytePos(
            78,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorsMultipleOperators.ts:5:5
  |
5 | var NUMBER: number;
  |     ^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            92,
        ),
        hi: BytePos(
            98,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorsMultipleOperators.ts:6:5
  |
6 | var STRING: string;
  |     ^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            112,
        ),
        hi: BytePos(
            118,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorsMultipleOperators.ts:7:5
  |
7 | var OBJECT: Object;
  |     ^^^^^^

error: unimplemented
expand_export_info(Object)
File: $DIR/tests/conformance/expressions/commaOperator/commaOperatorsMultipleOperators.ts
  --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorsMultipleOperators.ts:21:23
   |
21 | var resultIsObject1 = (NUMBER, STRING, OBJECT);
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^

error: NoNewSignature {
    span: Span {
        lo: BytePos(
            733,
        ),
        hi: BytePos(
            739,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorsMultipleOperators.ts:28:56
   |
28 | var resultIsObject2 = (++NUMBER, STRING.charAt(0), new Object());
   |                                                        ^^^^^^

